namespace Tools {
    public static class Constants {
        public static class Animator {
            public static class GameUI {
                public const string IsPaused = "IsPaused";
            }

            public static class Bear {
                public const string Swipe = "Swipe";
            }
            public static class Child {
                public const string Sleep = "Sleep";
            }

            public static class DialogueBox {
                public const string IsOpen = "Open";
            }
        }

        public static class Tags {
            public const string Enemy = "Enemy";
            public const string Child = "Child";
        }

        public static class Layers {
            public const string ChildGameplay = "Child Gameplay";
            public const string ChildGameplayFront = "Child Gameplay Front";
        }
    }
}